--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -874,7 +874,7 @@
   "pli-tv-kd2:27.6.8": "“On the observance day it may happen that the whole sangha in a certain monastery has committed the same offense. ",
   "pli-tv-kd2:27.6.9": "Those monks should straightaway send a monk to a neighboring monastery: ",
   "pli-tv-kd2:27.6.10": "ʻGo and make amends for this offense. ",
-  "pli-tv-kd2:27.6.11": "When you return, we’ll make amends for it in your presence.’ ",
+  "pli-tv-kd2:27.6.11": "When you return, we’ll make amends for it with you.’ ",
   "pli-tv-kd2:27.7.1": "If he’s able to do so, it’s good. ",
   "pli-tv-kd2:27.7.2": "If he’s not, then a competent and capable monk should inform the Sangha: ",
   "pli-tv-kd2:27.7.3": "‘Please, Venerables, I ask the Sangha to listen. ",
