--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -879,7 +879,7 @@
   "pli-tv-kd2:27.7.2": "If he’s not, then a competent and capable monk should inform the Sangha: ",
   "pli-tv-kd2:27.7.3": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd2:27.7.4": "This whole sangha has committed the same offense. ",
-  "pli-tv-kd2:27.7.5": "When the Sangha sees another monk who is pure and free from offenses, it should make amends for this offense in his presence.’ ",
+  "pli-tv-kd2:27.7.5": "When the Sangha sees another monk who is pure and free from offenses, it should make amends for this offense with him.’ ",
   "pli-tv-kd2:27.7.6": "Once this has been said, they can do the observance-day procedure and listen to the recitation of the Monastic Code. ",
   "pli-tv-kd2:27.7.7": "This is not an obstacle to doing the observance-day procedure. ",
   "pli-tv-kd2:27.8.1": "“On the observance day It may be that the whole sangha in a certain monastery is unsure if it has committed the same offense. ",
