--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -380,7 +380,7 @@
   "pli-tv-kd4:6.3.11": "So what should we do?” ",
   "pli-tv-kd4:6.3.13": "“On the invitation day It may be that the whole sangha in a certain monastery has committed the same offense. ",
   "pli-tv-kd4:6.3.14": "Those monks should straightaway send one monk to a neighboring monastery: ",
-  "pli-tv-kd4:6.3.15": "ʻGo and make amends for this offense. When you return, we’ll make amends for it in your presence.’ ",
+  "pli-tv-kd4:6.3.15": "ʻGo and make amends for this offense. When you return, we’ll make amends for it with you.’ ",
   "pli-tv-kd4:6.3.16": "If he’s able to do so, it’s good. ",
   "pli-tv-kd4:6.3.17": "If he’s not, then a competent and capable monk should inform the Sangha: ",
   "pli-tv-kd4:6.3.18": "‘Please, Venerables, I ask the Sangha to listen. ",
