--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -896,7 +896,7 @@
   "pli-tv-kd2:27.9.5": "If he’s able to do so, it’s good. ",
   "pli-tv-kd2:27.9.6": "If he’s not, they should send a monk using the seven-day allowance: ",
   "pli-tv-kd2:27.9.7": "ʻGo and make amends for this offense. ",
-  "pli-tv-kd2:27.9.8": "When you return, we’ll make amends for it in your presence.’” ",
+  "pli-tv-kd2:27.9.8": "When you return, we’ll make amends for it with you.’” ",
   "pli-tv-kd2:27.10.1": "Soon afterwards the whole sangha in a certain monastery had committed the same offense. ",
   "pli-tv-kd2:27.10.2": "They did not know the name or the class of that offense. ",
   "pli-tv-kd2:27.10.3": "Then a monk arrived who was learned and a master of the tradition; who was an expert on the Teaching, the Monastic Law, and the summaries; who was knowledgeable and competent, had a sense of conscience, and was afraid of wrongdoing and fond of the training. ",
