--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1269,7 +1269,7 @@
   "pli-tv-kd2:32.2.110": "And there’s a serious offense for the reciters.” ",
   "pli-tv-kd2:32.2.111": "The group of fifteen on aiming at schism is finished. The group of seventy-five is finished. ",
   "pli-tv-kd2:33.1.0": "33. The successive series on entering a monastery zone ",
-  "pli-tv-kd2:33.1.1": "“On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:33.1.1": "“On the observance day, it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:33.1.2": "They don’t know ",
   "pli-tv-kd2:33.1.3": "that other resident monks are coming inside the monastery zone. … ",
   "pli-tv-kd2:33.1.4": "They don’t know ",
