--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1118,7 +1118,7 @@
   "pli-tv-kd2:31.1.6": "While they’re doing it, a greater number of resident monks arrive. ",
   "pli-tv-kd2:31.1.7": "In such a case, those monks should recite the Monastic Code once more. ",
   "pli-tv-kd2:31.1.8": "And there’s an offense of wrong conduct for the reciters. ",
-  "pli-tv-kd2:31.2.1": "On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:31.2.1": "On the observance day, it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:31.2.2": "They know ",
   "pli-tv-kd2:31.2.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:31.2.4": "They think, ʻIt’s allowable for us to do the observance-day procedure; it’s not unallowable.’ ",
