--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1110,7 +1110,7 @@
   "pli-tv-kd2:30.2.29": "And there’s an offense of wrong conduct for the reciters.” ",
   "pli-tv-kd2:30.2.30": "The group of fifteen on being unsure is finished. ",
   "pli-tv-kd2:31.1.0": "31. The group of fifteen on being anxious ",
-  "pli-tv-kd2:31.1.1": "“On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:31.1.1": "“On the observance day, it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:31.1.2": "They know ",
   "pli-tv-kd2:31.1.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:31.1.4": "They think, ʻIt’s allowable for us to do the observance-day procedure; it’s not unallowable.’ ",
