--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1071,7 +1071,7 @@
   "pli-tv-kd2:29.3.12": "And there’s an offense of wrong conduct for the reciters.” ",
   "pli-tv-kd2:29.3.13": "The group of fifteen on perceiving an incomplete assembly as incomplete is finished. ",
   "pli-tv-kd2:30.1.0": "30. The group of fifteen on being unsure ",
-  "pli-tv-kd2:30.1.1": "“On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:30.1.1": "“On the observance day, it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:30.1.2": "They know ",
   "pli-tv-kd2:30.1.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:30.1.4": "They think, ʻIs it allowable for us to do the observance-day procedure, or is it not?’ ",
