--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1036,7 +1036,7 @@
   "pli-tv-kd2:28.7.21": "And there’s no offense for the reciters.” ",
   "pli-tv-kd2:28.7.22": "The group of fifteen on non-offenses is finished. ",
   "pli-tv-kd2:29.1.0": "29. The group of fifteen on perceiving an incomplete assembly as incomplete ",
-  "pli-tv-kd2:29.1.1": "“On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:29.1.1": "“On the observance day, it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:29.1.2": "They know ",
   "pli-tv-kd2:29.1.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:29.1.4": "Perceiving that they’re acting according to the Teaching and the Monastic Law, yet perceiving that the assembly is incomplete when it is, they do the observance-day procedure and recite the Monastic Code. ",
@@ -1227,7 +1227,7 @@
   "pli-tv-kd2:32.2.68": "When they’ve just finished, and only some members of the gathering have left, a greater number of resident monks arrive. ",
   "pli-tv-kd2:32.2.69": "In such a case, those monks should recite the Monastic Code once more. ",
   "pli-tv-kd2:32.2.70": "And there’s a serious offense for the reciters. ",
-  "pli-tv-kd2:32.2.71": "On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:32.2.71": "On the observance day, it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:32.2.72": "They know ",
   "pli-tv-kd2:32.2.73": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:32.2.74": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
