--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1061,7 +1061,7 @@
   "pli-tv-kd2:29.3.2": "They know ",
   "pli-tv-kd2:29.3.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:29.3.4": "Perceiving that they’re acting according to the Teaching and the Monastic Law, yet perceiving that the assembly is incomplete when it is, they do the observance-day procedure and recite the Monastic Code. ",
-  "pli-tv-kd2:29.3.5": "When they’ve just finished reciting the Monastic Code … ",
+  "pli-tv-kd2:29.3.5": "When they’ve just finished … ",
   "pli-tv-kd2:29.3.6": "When they’ve just finished, and none of the gathering has left … ",
   "pli-tv-kd2:29.3.7": "When they’ve just finished, and only some members of the gathering have left … ",
   "pli-tv-kd2:29.3.8": "When they’ve just finished, and the entire gathering has left, a greater number of resident monks arrive … ",
