--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1082,7 +1082,7 @@
   "pli-tv-kd2:30.2.1": "On the observance day, it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:30.2.2": "They know ",
   "pli-tv-kd2:30.2.3": "that there are other resident monks who haven’t arrived. ",
-  "pli-tv-kd2:30.2.4": "They think, ʻIs it allowable for us to do the observance-day procedure, or is it not?’ ",
+  "pli-tv-kd2:30.2.4": "They think, ʻIs it allowable for us to do the observance-day procedure, or isn’t it?’ ",
   "pli-tv-kd2:30.2.5": "Being unsure, they do the observance-day procedure and recite the Monastic Code. ",
   "pli-tv-kd2:30.2.6": "While they’re doing it, an equal number of resident monks arrive. ",
   "pli-tv-kd2:30.2.7": "In such a case, what has been recited is valid, and the remainder should be listened to. ",
