--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1098,7 +1098,7 @@
   "pli-tv-kd2:30.2.17": "“On the observance day, it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:30.2.18": "They know ",
   "pli-tv-kd2:30.2.19": "that there are other resident monks who haven’t arrived. ",
-  "pli-tv-kd2:30.2.20": "They think, ʻIs it allowable for us to do the observance-day procedure, or is it not?’ ",
+  "pli-tv-kd2:30.2.20": "They think, ʻIs it allowable for us to do the observance-day procedure, or isn’t it?’ ",
   "pli-tv-kd2:30.2.21": "Being unsure, they do the observance-day procedure and recite the Monastic Code. ",
   "pli-tv-kd2:30.2.22": "When they’ve just finished reciting the Monastic Code … ",
   "pli-tv-kd2:30.2.23": "When they’ve just finished, and none of the gathering has left … ",
