--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -500,7 +500,7 @@
   "pli-tv-kd4:7.5.54": "When they’ve just finished, and the entire gathering has left, an equal number of resident monks arrive. ",
   "pli-tv-kd4:7.5.55": "In such a case the invitations of those who already have invited are valid, and the late arrivals should invite in the presence of the others. ",
   "pli-tv-kd4:7.5.56": "And there’s no offense for those who already have invited. ",
-  "pli-tv-kd4:7.5.57": "On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:7.5.57": "On the invitation day, it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:7.5.58": "They don’t know ",
   "pli-tv-kd4:7.5.59": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:7.5.60": "Perceiving that they’re acting according to the Teaching and the Monastic Law, perceiving that the assembly is complete although it’s not, they do the invitation procedure. ",
@@ -509,7 +509,7 @@
   "pli-tv-kd4:7.5.63": "And there’s no offense for those who already have invited.” ",
   "pli-tv-kd4:7.5.64": "The group of fifteen on non-offenses is finished. ",
   "pli-tv-kd4:8.1.0": "10. The group of fifteen on perceiving an incomplete assembly as incomplete ",
-  "pli-tv-kd4:8.1.1": "“On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:8.1.1": "“On the invitation day, it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:8.1.2": "They know ",
   "pli-tv-kd4:8.1.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:8.1.4": "Perceiving that they’re acting according to the Teaching and the Monastic Law, yet perceiving that the assembly is incomplete when it is, they do the invitation procedure. ",
