--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -642,7 +642,7 @@
   "pli-tv-kd4:11.2.14": "While they’re doing it, a smaller number of resident monks arrive. ",
   "pli-tv-kd4:11.2.15": "In such a case the invitations of those who already have invited are valid, but the others should invite. ",
   "pli-tv-kd4:11.2.16": "And there’s a serious offense for those who already have invited. ",
-  "pli-tv-kd4:11.2.17": "“On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:11.2.17": "“On the invitation day, it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:11.2.18": "They know ",
   "pli-tv-kd4:11.2.19": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:11.2.20": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
