--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -666,7 +666,7 @@
   "pli-tv-kd4:11.2.38": "When they’ve just finished, a smaller number of resident monks arrive. ",
   "pli-tv-kd4:11.2.39": "In such a case the invitations of those who already have invited are valid, and the late arrivals should invite in the presence of the others. ",
   "pli-tv-kd4:11.2.40": "And there’s a serious offense for those who already have invited. ",
-  "pli-tv-kd4:11.2.41": "“On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:11.2.41": "“On the invitation day, it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:11.2.42": "They know ",
   "pli-tv-kd4:11.2.43": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:11.2.44": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
