--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -674,7 +674,7 @@
   "pli-tv-kd4:11.2.46": "When they’ve just finished, and none of the gathering has left, a greater number of resident monks arrive. ",
   "pli-tv-kd4:11.2.47": "In such a case those monks should do the invitation procedure once more. ",
   "pli-tv-kd4:11.2.48": "And there’s a serious offense for those who already have invited. ",
-  "pli-tv-kd4:11.2.49": "On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:11.2.49": "On the invitation day, it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:11.2.50": "They know ",
   "pli-tv-kd4:11.2.51": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:11.2.52": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
