--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -741,7 +741,7 @@
   "pli-tv-kd4:11.2.113": "The group of fifteen on aiming at schism is finished. ",
   "pli-tv-kd4:11.2.114": "The group of seventy-five is finished. ",
   "pli-tv-kd4:12.1.0": "14. The successive series on entering a monastery zone ",
-  "pli-tv-kd4:12.1.1": "“On the invitation day It may be that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:12.1.1": "“On the invitation day, it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:12.1.2": "They don’t know ",
   "pli-tv-kd4:12.1.3": "that other resident monks are coming inside the monastery zone. … ",
   "pli-tv-kd4:12.1.4": "They don’t know ",
