--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -730,7 +730,7 @@
   "pli-tv-kd4:11.2.102": "When they’ve just finished, and the entire gathering has left, an equal number of resident monks arrive. ",
   "pli-tv-kd4:11.2.103": "In such a case the invitations of those who already have invited are valid, and the late arrivals should invite in the presence of the others. ",
   "pli-tv-kd4:11.2.104": "And there’s a serious offense for those who already have invited. ",
-  "pli-tv-kd4:11.2.105": "On the invitation day It may be that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:11.2.105": "On the invitation day, it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:11.2.106": "They know ",
   "pli-tv-kd4:11.2.107": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:11.2.108": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
