--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -493,7 +493,7 @@
   "pli-tv-kd4:7.5.47": "When they’ve just finished, and the entire gathering has left, a greater number of resident monks arrive. ",
   "pli-tv-kd4:7.5.48": "In such a case those monks should do the invitation procedure once more. ",
   "pli-tv-kd4:7.5.49": "And there’s no offense for those who already have invited. ",
-  "pli-tv-kd4:7.5.50": "On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:7.5.50": "On the invitation day, it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:7.5.51": "They don’t know ",
   "pli-tv-kd4:7.5.52": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:7.5.53": "Perceiving that they’re acting according to the Teaching and the Monastic Law, perceiving that the assembly is complete although it’s not, they do the invitation procedure. ",
