--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -320,7 +320,7 @@
   "pli-tv-kd4:5.7.3": "“The Buddha has instructed that the invitation procedure should be done in the Sangha when there are five monks and with one another when there are two, three, or four. ",
   "pli-tv-kd4:5.7.4": "But I’m here by myself. ",
   "pli-tv-kd4:5.7.5": "So how should I do the invitation procedure?” ",
-  "pli-tv-kd4:5.8.1": "“On the invitation day it may be that a monk is staying by himself in a certain monastery. ",
+  "pli-tv-kd4:5.8.1": "“On the invitation day, it may be that a monk is staying by himself in a certain monastery. ",
   "pli-tv-kd4:5.8.2": "That monk should sweep the place where the monks normally go: whether the assembly hall, under a roof-cover, or at the foot of a tree. He should set out water for drinking and water for washing. He should prepare a seat, light a lamp, and sit down. ",
   "pli-tv-kd4:5.8.3": "If other monks arrive, he should do the invitation procedure with them. ",
   "pli-tv-kd4:5.8.4": "If not, he should determine: ʻToday is my invitation procedure.’ ",
