--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -123,5 +123,6 @@
   "mn10:35.3": "Arba jame yra įtvirtinta atida: „Yra protas“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
   "mn10:35.4": "Taip irgi, vienuoliai, vienuolis gyvena kontempliuodamas prota prote.",
   "mn10:36.0.1": "4. Principų kontempliacija",
-  "mn10:36.0.2": "4.1 Кliūčių skyrius"
+  "mn10:36.0.2": "4.1 Кliūčių skyrius",
+  "mn10:36.1": "Ir kaip, vienuoliai, vienuolis gyvena kontempliuodamas principus principuose?"
 }
