--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1271,7 +1271,7 @@
   "pli-tv-kd2:33.1.0": "33. The successive series on entering a monastery zone ",
   "pli-tv-kd2:33.1.1": "“On the observance day, it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:33.1.2": "They don’t know ",
-  "pli-tv-kd2:33.1.3": "that other resident monks have entered the monastery zone. … ",
+  "pli-tv-kd2:33.1.3": "that other resident monks are entering the monastery zone. … ",
   "pli-tv-kd2:33.1.4": "They don’t know ",
   "pli-tv-kd2:33.1.5": "that other resident monks have come inside the monastery zone. … ",
   "pli-tv-kd2:33.1.6": "They don’t see that other resident monks are coming inside the monastery zone. … ",
