--- a/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
@@ -9,7 +9,7 @@
   "dn23:2.1": "Nun hatte Pāyāsi zu dieser Zeit den folgenden schädlichen Irrglauben: ",
   "dn23:2.2": "„Es gibt kein Leben nach dem Tod. Es gibt keine Wesen, die durch unmittelbares Erscheinen wiedergeboren werden. Es gibt keine Frucht und kein Ergebnis von guten und schlechten Taten.“ ",
   "dn23:2.3": "Die Brahmanen und Hausbesitzer von Setavyā hörten: ",
-  "dn23:2.4": "„Es scheint, der Asket Kassapa der Prinz – ein Schüler des Asketen Gotama – hält sich im Wäldchen von Indischem Palisander im Norden von Setavyā auf. ",
+  "dn23:2.4": "„Es scheint, der Asket Kassapa der Prinz – ein Schüler des Asketen Gotama – hält sich im Palisanderwald im Norden von Setavyā auf. ",
   "dn23:2.5": "Er hat diesen guten Ruf: ",
   "dn23:2.6": "‚Er ist klug, fähig, verständig, gelehrt, ein geistvoller Redner, wortgewandt, zur Reife gelangt, ein Vollendeter.‘ ",
   "dn23:2.7": "Es ist gut, solche Vollendeten zu sehen.“ ",
