--- a/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
@@ -18,7 +18,7 @@
   "dn23:3.2": "Er sah, wie die Brahmanen und Hausbesitzer nach Norden zu dem Wäldchen zogen, ",
   "dn23:3.3": "und wandte sich an seinen Verwalter: ",
   "dn23:3.4": "„Mein Verwalter, warum ziehen die Brahmanen und Hausbesitzer nach Norden zu dem Wäldchen?“ ",
-  "dn23:3.5": "„Der Asket Kassapa der Prinz – ein Schüler des Asketen Gotama – hält sich im Wäldchen von Indischem Palisander im Norden von Setavyā auf. ",
+  "dn23:3.5": "„Der Asket Kassapa der Prinz – ein Schüler des Asketen Gotama – hält sich im Palisanderwald im Norden von Setavyā auf. ",
   "dn23:3.6": "Er hat diesen guten Ruf: ",
   "dn23:3.7": "‚Er ist klug, fähig, verständig, gelehrt, ein geistvoller Redner, wortgewandt, zur Reife gelangt, ein Vollendeter.‘ ",
   "dn23:3.8": "Sie gehen, um diesen Kassapa den Prinzen zu sehen.“ ",
