--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1301,7 +1301,7 @@
   "pli-tv-kd2:34.4.4": "If the number of newly arrived monks is greater, they may, if they’re willing, do the observance-day procedure with the resident monks. ",
   "pli-tv-kd2:34.4.5": "Otherwise the resident monks should go outside the monastery zone and do the observance-day procedure there. ",
   "pli-tv-kd2:34.5.0": "34. The seeing of characteristics, etc. ",
-  "pli-tv-kd2:34.5.1": "“It may happen that newly arrived monks see signs and indications of resident monks: beds and benches have been made up, water for drinking and water for washing have been put out, precincts are well-swept. ",
+  "pli-tv-kd2:34.5.1": "“It may happen that newly arrived monks see signs and indications of resident monks: beds and benches that are made up, water for drinking and water for washing that are ready to use, precincts that are well-swept. ",
   "pli-tv-kd2:34.5.2": "As a consequence, they think there may be resident monks there, but they’re unsure. Then—",
   "pli-tv-kd2:34.6.1": "If they don’t investigate, ",
   "pli-tv-kd2:34.6.2": "and they then do the observance-day procedure, ",
